--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular-page-loader": "^1.0.2",
     "angular-resource": "^1.6.9",
     "angular-route": "^1.6.9",
+    "angular-sanitize": "^1.6.9",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
     "jquery": "^3.3.1"
